index page updated 2

--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 <body>
 	<p>Привет</p>
 	<p>Покеда</p>
+	<img src="dino.jpg" />
+	<tr>
+	  <td>Hi, I'm your first cell.</td>
+	  <td>I'm your second cell.</td>
+	  <td>I'm your third cell.</td>
+	  <td>I'm your fourth cell.</td>
+	</tr>
+	<tr>
+	  <td>Hi, I'm your first cell.</td>
+	  <td>I'm your second cell.</td>
+	  <td>I'm your third cell.</td>
+	  <td>I'm your fourth cell.</td>
+	</tr>
 </body>
 </html>
